# FireAudit

./: .gitignore  README.md  add_disa_stig.py  build_exe.py  fireaudit_main.py  pyproject.toml
.github/workflows/: build.yml
fireaudit/: __init__.py  cli.py  updater.py  wizard.py
fireaudit/data/: framework_urls.py
fireaudit/engine/: __init__.py  evaluator.py  loader.py  scoring.py
fireaudit/output/: __init__.py  html_report.py  json_report.py  pdf_report.py
fireaudit/parsers/: __init__.py  base.py  checkpoint.py  cisco_asa.py  fortigate.py  juniper_srx.py  paloalto.py  pfsense.py  sonicwall.py  sophos_xg.py  watchguard.py
fireaudit/schemas/: ir_schema.json
rules/admin/: FW-ADM-001-disable-http.yaml  FW-ADM-002-disable-telnet.yaml  FW-ADM-003-ssh-version-2.yaml  FW-ADM-004-admin-session-timeout.yaml  FW-ADM-005-trusted-hosts.yaml  FW-ADM-006-login-banner.yaml  FW-ADM-007-snmp-v1v2c-disabled.yaml  FW-ADM-008-https-tls-version.yaml  FW-ADM-009-max-login-attempts.yaml  FW-ADM-010-snmpv3-authpriv.yaml  FW-ADM-011-https-management-on-wan.yaml  FW-ADM-012-ssh-management-on-wan.yaml  FW-ADM-013-snmp-restricted-access.yaml  FW-ADM-014-ssh-weak-ciphers.yaml
rules/auth/: FW-AUTH-001-password-min-length.yaml  FW-AUTH-002-default-admin-renamed.yaml  FW-AUTH-003-password-complexity.yaml  FW-AUTH-004-password-history.yaml  FW-AUTH-005-account-lockout.yaml  FW-AUTH-006-mfa-admin.yaml  (+2 more)
tests/: PARSER_GAP_REPORT.md  test_cli.py  test_engine_evaluator_conditions.py  test_engine_loader.py  test_scoring.py  test_updater.py  test_vendor_detection.py
tests/fixtures/: README.md
(+61 files in other folders)
